@@ -29,6 +29,10 @@ Bug Fixes
   hide the true docvalues update generation or other properties. 
   (Ishan Chattopadhyaya via Robert Muir)
 
+* LUCENE-6948: Fix ArrayIndexOutOfBoundsException in PagedBytes$Reader.fill
+  by removing an unnecessary long-to-int cast.
+  (Michael Lawley via Christine Poerschke)
+
 ======================= Lucene 5.4.0 =======================
 
 New Features
